--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite dev --open",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "svelte": "^4.0.5",
+    "svelte-check": "^3.4.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^4.4.2"
+    "tslib": "^2.4.1",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.3"
   }
 }
