--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/adapter-auto": "^3.3.1",
+    "@sveltejs/kit": "^2.37.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
@@ -24,5 +24,8 @@
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3"
+  },
+  "dependencies": {
+    "@tailwindcss/postcss": "^4.1.12"
   }
 }
