--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sveltejs/adapter-auto": "^3.3.1",
     "@sveltejs/kit": "^2.37.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/node": "^24.3.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "svelte": "^4.0.5",
@@ -26,6 +27,7 @@
     "vite": "^5.0.3"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.12"
+    "@tailwindcss/postcss": "^4.1.12",
+    "openai": "^5.16.0"
   }
 }
