fix deploy issues

--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CAjZy8pn.js",
+    "file": "_app/immutable/entry/app.D7Xu_L9j.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -30,7 +30,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.DZKESgXi.js",
+    "file": "_app/immutable/nodes/1.DejCO8Tb.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -38,11 +38,11 @@
     "imports": [
       "_Dus5G4-p.js",
       "_IHki7fMi.js",
-      "_DEpKyr1n.js"
+      "_Nf4Cgrso.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.Do4Tx0hP.js",
+    "file": "_app/immutable/nodes/2.D7Nm3WSx.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -50,7 +50,7 @@
     "imports": [
       "_Dus5G4-p.js",
       "_IHki7fMi.js",
-      "_DEpKyr1n.js"
+      "_Nf4Cgrso.js"
     ],
     "css": [
       "_app/immutable/assets/2.DagGfLuA.css"
@@ -70,13 +70,6 @@
       "_app/immutable/assets/3.Z9oWwcTK.css"
     ]
   },
-  "_DEpKyr1n.js": {
-    "file": "_app/immutable/chunks/DEpKyr1n.js",
-    "name": "entry",
-    "imports": [
-      "_Dus5G4-p.js"
-    ]
-  },
   "_Dus5G4-p.js": {
     "file": "_app/immutable/chunks/Dus5G4-p.js",
     "name": "Component"
@@ -85,13 +78,20 @@
     "file": "_app/immutable/chunks/IHki7fMi.js",
     "name": "index"
   },
+  "_Nf4Cgrso.js": {
+    "file": "_app/immutable/chunks/Nf4Cgrso.js",
+    "name": "entry",
+    "imports": [
+      "_Dus5G4-p.js"
+    ]
+  },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CMhbIRpD.js",
+    "file": "_app/immutable/entry/start.BPV0BlQm.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_DEpKyr1n.js"
+      "_Nf4Cgrso.js"
     ]
   }
 }
