--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "vite": "^5.0.3"
   },
   "dependencies": {
+    "@sveltejs/adapter-netlify": "^5.2.3",
+    "@sveltejs/adapter-static": "^3.0.9",
     "@tailwindcss/postcss": "^4.1.12",
     "openai": "^5.16.0"
   }
