another attempt to fix deploy issues

--- a/.netlify/server/.vite/manifest.json
+++ b/.netlify/server/.vite/manifest.json
@@ -101,7 +101,7 @@
       "_ssr.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout.bJ22kFBi.css"
+      "_app/immutable/assets/_layout.CYARllBX.css"
     ]
   },
   "src/routes/+page.svelte": {
