--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.D7Xu_L9j.js",
+    "file": "_app/immutable/entry/app.Dh9ip48c.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -16,7 +16,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.DWL05RZs.js",
+    "file": "_app/immutable/nodes/0.BuvRPZQ0.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -26,11 +26,11 @@
       "_IHki7fMi.js"
     ],
     "css": [
-      "_app/immutable/assets/0.ByHdtWU1.css"
+      "_app/immutable/assets/0.BK8IHO2O.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.DejCO8Tb.js",
+    "file": "_app/immutable/nodes/1.Dt1hODOI.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -38,11 +38,11 @@
     "imports": [
       "_Dus5G4-p.js",
       "_IHki7fMi.js",
-      "_Nf4Cgrso.js"
+      "_CAuXGamI.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.D7Nm3WSx.js",
+    "file": "_app/immutable/nodes/2.DDL09LJM.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -50,7 +50,7 @@
     "imports": [
       "_Dus5G4-p.js",
       "_IHki7fMi.js",
-      "_Nf4Cgrso.js"
+      "_CAuXGamI.js"
     ],
     "css": [
       "_app/immutable/assets/2.DagGfLuA.css"
@@ -70,6 +70,13 @@
       "_app/immutable/assets/3.Z9oWwcTK.css"
     ]
   },
+  "_CAuXGamI.js": {
+    "file": "_app/immutable/chunks/CAuXGamI.js",
+    "name": "entry",
+    "imports": [
+      "_Dus5G4-p.js"
+    ]
+  },
   "_Dus5G4-p.js": {
     "file": "_app/immutable/chunks/Dus5G4-p.js",
     "name": "Component"
@@ -78,20 +85,13 @@
     "file": "_app/immutable/chunks/IHki7fMi.js",
     "name": "index"
   },
-  "_Nf4Cgrso.js": {
-    "file": "_app/immutable/chunks/Nf4Cgrso.js",
-    "name": "entry",
-    "imports": [
-      "_Dus5G4-p.js"
-    ]
-  },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.BPV0BlQm.js",
+    "file": "_app/immutable/entry/start.77jTM7og.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_Nf4Cgrso.js"
+      "_CAuXGamI.js"
     ]
   }
 }
